@@ -1,3 +1,9 @@
+2001-10-31  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m-e21.el (w3m-tab-unselected-face): Changed underline color.
+	(w3m-tab-selected-face): Ditto.
+	(w3m-tab-background-face): Ditto.
+
 2001-10-30  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m-e21.el (w3m-header-line-location-title-face): Specify background
